create class: game, player, tictactoe

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
 <body>
   <h1>Hello, <%=username%>!</h1>
   <div class="container">
-    
+    <a href="/tictactoe/pvp">tictactoe</a>
   </div>
 
   <!-- Optional JavaScript -->
