--- a/views/tictactoe/pvp.ejs
+++ b/views/tictactoe/pvp.ejs
@@ -31,7 +31,9 @@
         </div>
       </div>
       <div>
-        <p id="notice"></p>
+        <p id="notice">
+          <button id="reset">reset game</button>
+        </p>
       </div>
     </div>
 
